kubernetes-deployments/infrastructure/nvidia-gpu-operator/tmp/deployment-node-feature-discovery-master.yaml
# Source: gpu-operator/charts/gpu-operator/charts/node-feature-discovery/templates/master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  node-feature-discovery-master
  namespace: default
  labels:
    helm.sh/chart: node-feature-discovery-0.17.3
    app.kubernetes.io/name: node-feature-discovery
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.17.3"
    app.kubernetes.io/managed-by: Helm
    role: master
spec:
  replicas: 1
  revisionHistoryLimit: 
  selector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      app.kubernetes.io/instance: release-name
      role: master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-feature-discovery
        app.kubernetes.io/instance: release-name
        role: master
      annotations:
        checksum/config: 3a1334a2b505e81531b740783fe9b5495bac4f85482eed5c745b35cc0216bfb8
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: node-feature-discovery
      enableServiceLinks: false
      securityContext:
        {}
      hostNetwork: false
      containers:
        - name: master
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "registry.k8s.io/nfd/node-feature-discovery:v0.17.3"
          imagePullPolicy: IfNotPresent
          startupProbe:
            grpc:
              port: 8082
            failureThreshold: 30
          livenessProbe:
            grpc:
              port: 8082
          readinessProbe:
            grpc:
              port: 8082
            failureThreshold: 10
          ports:
          - containerPort: 8081
            name: metrics
          - containerPort: 8082
            name: health
          command:
            - "nfd-master"
          resources:
            limits:
              cpu: 25m
              memory: 48Mi
            requests:
              cpu: 5m
              memory: 24Mi
          args:
            - "-enable-leader-election"
            # Go over featureGates and add the feature-gate flag
            - "-feature-gates=NodeFeatureGroupAPI=false"
            - "-metrics=8081"
            - "-grpc-health=8082"
          volumeMounts:
            - name: nfd-master-conf
              mountPath: "/etc/kubernetes/node-feature-discovery"
              readOnly: true
      volumes:
        - name: nfd-master-conf
          configMap:
            name: node-feature-discovery-master-conf
            items:
              - key: nfd-master.conf
                path: nfd-master.conf
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: In
                values:
                - ""
            weight: 1
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: In
                values:
                - ""
            weight: 1
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Equal
          value: ""
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Equal
          value: ""
